remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -421,7 +421,7 @@
                 "description": "Harrah's Las Vegas reservations https://book.passkey.com/go/SHDEF0",
                 "owner": "Mike",
                 "project_name": "DEFCON 28",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-05-08",
