--- a/_data/projects.json
+++ b/_data/projects.json
@@ -441,7 +441,7 @@
                 "description": "Send KBYG Email",
                 "owner": "Emily",
                 "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-06-23",
