remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -128,7 +128,7 @@
                 "description": "Independence Day (Observed)",
                 "owner": "No Owner",
                 "project_name": "OWASP Staff Holidays",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-09-07",
