--- a/_data/projects.json
+++ b/_data/projects.json
@@ -364,7 +364,7 @@
                 "description": "Send Trainers Link to Registration Report",
                 "owner": "Emily",
                 "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-06-12",
@@ -378,7 +378,7 @@
                 "description": "Open Scholarship Form",
                 "owner": "Mike",
                 "project_name": "Virtual AppSec Days Summer of Security",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-06-15",
@@ -629,7 +629,7 @@
                 "description": "Program Announced",
                 "owner": "Emily",
                 "project_name": "Global AppSec - San Francisco",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-06-15",
